# serializer version: 1
# name: test_inferRunNames[combined]
  list([
    'test_raw_1',
    'test_raw_2',
  ])
# ---
# name: test_inferRunNames[diann1]
  list([
    'test_raw_1',
  ])
# ---
# name: test_inferRunNames[openswath]
  list([
    'test_raw_1',
    'test_raw_2',
  ])
# ---
# name: test_loadIdentifiedPeptides[combined]
  dict({
    'DIA-NN': dict({
      'test_raw_1': set({
        'AGAANIVPNSTGAAK',
        'DYASIDAAPEER',
        'IEDQLGEVAQYK',
        'KVVITAPGGNDVK',
      }),
      'test_raw_2': set({
        'AGAANIVPNSTGAAK',
        'DYASIDAAPEER',
        'IEDQLGEVAQYK',
        'KVVITAPGGNDVK',
      }),
    }),
    'OpenSWATH': dict({
      'test_raw_1': set({
        'AGAANIVPNSTGAAK',
        'DYASIDAAPEER',
        'IEDQLGEVAQYK',
        'KVVITAPGGNDVK',
      }),
      'test_raw_2': set({
        'AGAANIVPNSTGAAK',
        'DYASIDAAPEER',
        'IEDQLGEVAQYK',
        'KVVITAPGGNDVK',
      }),
    }),
  })
# ---
# name: test_loadIdentifiedPeptides[diann1]
  dict({
    'DIA-NN': dict({
      'test_raw_1': set({
        'AGAANIVPNSTGAAK',
        'DYASIDAAPEER',
        'IEDQLGEVAQYK',
        'KVVITAPGGNDVK',
      }),
    }),
  })
# ---
# name: test_loadIdentifiedPeptides[openswath]
  dict({
    'OpenSWATH': dict({
      'test_raw_1': set({
        'AGAANIVPNSTGAAK',
        'DYASIDAAPEER',
        'IEDQLGEVAQYK',
        'KVVITAPGGNDVK',
      }),
      'test_raw_2': set({
        'AGAANIVPNSTGAAK',
        'DYASIDAAPEER',
        'IEDQLGEVAQYK',
        'KVVITAPGGNDVK',
      }),
    }),
  })
# ---
# name: test_loadIdentifiedPrecursors[combined]
  dict({
    'DIA-NN': dict({
      'test_raw_1': set({
        'AGAANIVPNSTGAAK2',
        'AGAANIVPNSTGAAK3',
        'DYASIDAAPEER2',
        'DYASIDAAPEER3',
        'IEDQLGEVAQYK2',
        'IEDQLGEVAQYK3',
        'KVVITAPGGNDVK2',
        'KVVITAPGGNDVK3',
      }),
      'test_raw_2': set({
        'AGAANIVPNSTGAAK2',
        'AGAANIVPNSTGAAK3',
        'DYASIDAAPEER2',
        'DYASIDAAPEER3',
        'IEDQLGEVAQYK2',
        'IEDQLGEVAQYK3',
        'KVVITAPGGNDVK2',
        'KVVITAPGGNDVK3',
      }),
    }),
    'OpenSWATH': dict({
      'test_raw_1': set({
        'AGAANIVPNSTGAAK2',
        'AGAANIVPNSTGAAK3',
        'DYASIDAAPEER2',
        'DYASIDAAPEER3',
        'IEDQLGEVAQYK2',
        'IEDQLGEVAQYK3',
        'KVVITAPGGNDVK2',
        'KVVITAPGGNDVK3',
      }),
      'test_raw_2': set({
        'AGAANIVPNSTGAAK2',
        'AGAANIVPNSTGAAK3',
        'DYASIDAAPEER2',
        'DYASIDAAPEER3',
        'IEDQLGEVAQYK2',
        'IEDQLGEVAQYK3',
        'KVVITAPGGNDVK2',
        'KVVITAPGGNDVK3',
      }),
    }),
  })
# ---
# name: test_loadIdentifiedPrecursors[diann1]
  dict({
    'DIA-NN': dict({
      'test_raw_1': set({
        'AGAANIVPNSTGAAK2',
        'AGAANIVPNSTGAAK3',
        'DYASIDAAPEER2',
        'DYASIDAAPEER3',
        'IEDQLGEVAQYK2',
        'IEDQLGEVAQYK3',
        'KVVITAPGGNDVK2',
        'KVVITAPGGNDVK3',
      }),
    }),
  })
# ---
# name: test_loadIdentifiedPrecursors[openswath]
  dict({
    'OpenSWATH': dict({
      'test_raw_1': set({
        'AGAANIVPNSTGAAK2',
        'AGAANIVPNSTGAAK3',
        'DYASIDAAPEER2',
        'DYASIDAAPEER3',
        'IEDQLGEVAQYK2',
        'IEDQLGEVAQYK3',
        'KVVITAPGGNDVK2',
        'KVVITAPGGNDVK3',
      }),
      'test_raw_2': set({
        'AGAANIVPNSTGAAK2',
        'AGAANIVPNSTGAAK3',
        'DYASIDAAPEER2',
        'DYASIDAAPEER3',
        'IEDQLGEVAQYK2',
        'IEDQLGEVAQYK3',
        'KVVITAPGGNDVK2',
        'KVVITAPGGNDVK3',
      }),
    }),
  })
# ---
# name: test_loadIdentifiedProteins[combined]
  dict({
    'DIA-NN': dict({
      'test_raw_1': set({
        'P0C0G6;P0C0G7;P0DB18;Q5XDW3;P0DB19;P68777',
        'Q5XD01;P69949;A2RFE3;B5XKM7;P0DA94;P0DA95;P69951;Q1J7I5;Q1JCN8;Q1JHQ6;Q1JML5;Q48UF7',
        'Q5XD49;A2RFQ4;B5XKI1;P0DA82;P0DA83;P69952;Q1J7N4;Q1JCT6;Q1JHV6;Q1JMR3;Q48UK5;Q8P1W4',
      }),
      'test_raw_2': set({
        'P0C0G6;P0C0G7;P0DB18;Q5XDW3;P0DB19;P68777',
        'Q5XD01;P69949;A2RFE3;B5XKM7;P0DA94;P0DA95;P69951;Q1J7I5;Q1JCN8;Q1JHQ6;Q1JML5;Q48UF7',
        'Q5XD49;A2RFQ4;B5XKI1;P0DA82;P0DA83;P69952;Q1J7N4;Q1JCT6;Q1JHV6;Q1JMR3;Q48UK5;Q8P1W4',
      }),
    }),
    'OpenSWATH': dict({
      'test_raw_1': set({
        'Spyo_Exp3652_DDB_SeqID_514830',
        'Spyo_Exp3652_DDB_SeqID_514851',
        'Spyo_Exp3652_DDB_SeqID_515131',
      }),
      'test_raw_2': set({
        'Spyo_Exp3652_DDB_SeqID_514830',
        'Spyo_Exp3652_DDB_SeqID_514851',
        'Spyo_Exp3652_DDB_SeqID_515131',
      }),
    }),
  })
# ---
# name: test_loadIdentifiedProteins[diann1]
  dict({
    'DIA-NN': dict({
      'test_raw_1': set({
        'P0C0G6;P0C0G7;P0DB18;Q5XDW3;P0DB19;P68777',
        'Q5XD01;P69949;A2RFE3;B5XKM7;P0DA94;P0DA95;P69951;Q1J7I5;Q1JCN8;Q1JHQ6;Q1JML5;Q48UF7',
        'Q5XD49;A2RFQ4;B5XKI1;P0DA82;P0DA83;P69952;Q1J7N4;Q1JCT6;Q1JHV6;Q1JMR3;Q48UK5;Q8P1W4',
      }),
    }),
  })
# ---
# name: test_loadIdentifiedProteins[openswath]
  dict({
    'OpenSWATH': dict({
      'test_raw_1': set({
        'Spyo_Exp3652_DDB_SeqID_514830',
        'Spyo_Exp3652_DDB_SeqID_514851',
        'Spyo_Exp3652_DDB_SeqID_515131',
      }),
      'test_raw_2': set({
        'Spyo_Exp3652_DDB_SeqID_514830',
        'Spyo_Exp3652_DDB_SeqID_514851',
        'Spyo_Exp3652_DDB_SeqID_515131',
      }),
    }),
  })
# ---
# name: test_loadNumIdentifiedPeptides[combined]
  dict({
    'DIA-NN': dict({
      'test_raw_1': 4,
      'test_raw_2': 4,
    }),
    'OpenSWATH': dict({
      'test_raw_1': 4,
      'test_raw_2': 4,
    }),
  })
# ---
# name: test_loadNumIdentifiedPeptides[diann1]
  dict({
    'DIA-NN': dict({
      'test_raw_1': 4,
    }),
  })
# ---
# name: test_loadNumIdentifiedPeptides[openswath]
  dict({
    'OpenSWATH': dict({
      'test_raw_1': 4,
      'test_raw_2': 4,
    }),
  })
# ---
# name: test_loadNumIdentifiedPrecursors[combined]
  dict({
    'DIA-NN': dict({
      'test_raw_1': 8,
      'test_raw_2': 8,
    }),
    'OpenSWATH': dict({
      'test_raw_1': 8,
      'test_raw_2': 8,
    }),
  })
# ---
# name: test_loadNumIdentifiedPrecursors[diann1]
  dict({
    'DIA-NN': dict({
      'test_raw_1': 8,
    }),
  })
# ---
# name: test_loadNumIdentifiedPrecursors[openswath]
  dict({
    'OpenSWATH': dict({
      'test_raw_1': 8,
      'test_raw_2': 8,
    }),
  })
# ---
# name: test_loadNumIdentifiedProteins[combined]
  dict({
    'DIA-NN': dict({
      'test_raw_1': 3,
      'test_raw_2': 3,
    }),
    'OpenSWATH': dict({
      'test_raw_1': 3,
      'test_raw_2': 3,
    }),
  })
# ---
# name: test_loadNumIdentifiedProteins[diann1]
  dict({
    'DIA-NN': dict({
      'test_raw_1': 3,
    }),
  })
# ---
# name: test_loadNumIdentifiedProteins[openswath]
  dict({
    'OpenSWATH': dict({
      'test_raw_1': 3,
      'test_raw_2': 3,
    }),
  })
# ---
# name: test_loadSoftware[combined]
  list([
    'DIA-NN',
    'OpenSWATH',
  ])
# ---
# name: test_loadSoftware[diann1]
  list([
    'DIA-NN',
  ])
# ---
# name: test_loadSoftware[openswath]
  list([
    'OpenSWATH',
  ])
# ---
# name: test_loadTopTransitionGroupFeature[combined-AGAANIVPNSTGAAK-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 1933.4520000000002
  rightBoundary: 1967.5919999999999
  areaIntensity: 10209.3
  consensusApex: 1950.522
  consensusApexIntensity: None
  qvalue: 2.90751e-06
  consensusApexIM: 0
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: DIA-NN,
      -------- TransitionGroupFeature --------
  leftBoundary: 1923.2130126953125
  rightBoundary: 2001.72900390625
  areaIntensity: 4390.32825839279
  consensusApex: 1953.14
  consensusApexIntensity: 4390.32825839279
  qvalue: 6.993573006436113e-06
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
    ]),
    'test_raw_2': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 1912.974
  rightBoundary: 1940.2859999999998
  areaIntensity: 9815.24
  consensusApex: 1926.63
  consensusApexIntensity: None
  qvalue: 2.84659e-05
  consensusApexIM: 0
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: DIA-NN,
      -------- TransitionGroupFeature --------
  leftBoundary: 1895.906005859375
  rightBoundary: 1971.010986328125
  areaIntensity: 2540.8210337067203
  consensusApex: 1920.24
  consensusApexIntensity: 2540.8210337067203
  qvalue: 6.993573006436113e-06
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
    ]),
  })
  '''
# ---
# name: test_loadTopTransitionGroupFeature[combined-INVALID-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
    ]),
    'test_raw_2': list([
    ]),
  })
  '''
# ---
# name: test_loadTopTransitionGroupFeature[diann1-AGAANIVPNSTGAAK-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 1933.4520000000002
  rightBoundary: 1967.5919999999999
  areaIntensity: 10209.3
  consensusApex: 1950.522
  consensusApexIntensity: None
  qvalue: 2.90751e-06
  consensusApexIM: 0
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: DIA-NN,
    ]),
  })
  '''
# ---
# name: test_loadTopTransitionGroupFeature[diann1-INVALID-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
    ]),
  })
  '''
# ---
# name: test_loadTopTransitionGroupFeature[openswath-AGAANIVPNSTGAAK-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 1923.2130126953125
  rightBoundary: 2001.72900390625
  areaIntensity: 4390.32825839279
  consensusApex: 1953.14
  consensusApexIntensity: 4390.32825839279
  qvalue: 6.993573006436113e-06
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
    ]),
    'test_raw_2': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 1895.906005859375
  rightBoundary: 1971.010986328125
  areaIntensity: 2540.8210337067203
  consensusApex: 1920.24
  consensusApexIntensity: 2540.8210337067203
  qvalue: 6.993573006436113e-06
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
    ]),
  })
  '''
# ---
# name: test_loadTopTransitionGroupFeature[openswath-INVALID-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
    ]),
    'test_raw_2': list([
    ]),
  })
  '''
# ---
# name: test_loadTransitionGroupFeatures[combined-AGAANIVPNSTGAAK-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 1933.4520000000002
  rightBoundary: 1967.5919999999999
  areaIntensity: 10209.3
  consensusApex: 1950.522
  consensusApexIntensity: None
  qvalue: 2.90751e-06
  consensusApexIM: 0
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: DIA-NN,
      -------- TransitionGroupFeature --------
  leftBoundary: 2206.55908203125
  rightBoundary: 2250.93701171875
  areaIntensity: 93.7645
  consensusApex: 2226.53
  consensusApexIntensity: 25.361407994046484
  qvalue: 0.27997408312165795
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 2001.72900390625
  rightBoundary: 2039.2840576171875
  areaIntensity: 70.6678
  consensusApex: 2009.74
  consensusApexIntensity: 33.88131947814447
  qvalue: 1.822896508451022e-05
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 2158.76611328125
  rightBoundary: 2203.14501953125
  areaIntensity: 113.104
  consensusApex: 2177.07
  consensusApexIntensity: 30.8382840089739
  qvalue: 0.16741273086102035
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 2117.801025390625
  rightBoundary: 2158.76611328125
  areaIntensity: 784.279
  consensusApex: 2138.98
  consensusApexIntensity: 165.07510208344246
  qvalue: 0.0009590506619916316
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 1923.2130126953125
  rightBoundary: 2001.72900390625
  areaIntensity: 44921.8
  consensusApex: 1953.14
  consensusApexIntensity: 4390.32825839279
  qvalue: 6.993573006436113e-06
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
    ]),
    'test_raw_2': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 1912.974
  rightBoundary: 1940.2859999999998
  areaIntensity: 9815.24
  consensusApex: 1926.63
  consensusApexIntensity: None
  qvalue: 2.84659e-05
  consensusApexIM: 0
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: DIA-NN,
      -------- TransitionGroupFeature --------
  leftBoundary: 2104.14990234375
  rightBoundary: 2145.115966796875
  areaIntensity: 417.457
  consensusApex: 2126.42
  consensusApexIntensity: 95.16263446243194
  qvalue: 0.0004287466278223515
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 1971.010986328125
  rightBoundary: 2039.2860107421875
  areaIntensity: 1049.18
  consensusApex: 2000.31
  consensusApexIntensity: 159.3757949554613
  qvalue: 3.35632586944344e-05
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 1895.906005859375
  rightBoundary: 1971.010986328125
  areaIntensity: 30771.2
  consensusApex: 1920.24
  consensusApexIntensity: 2540.8210337067203
  qvalue: 6.993573006436113e-06
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 2145.115966796875
  rightBoundary: 2182.6708984375
  areaIntensity: 60.9997
  consensusApex: 2162.68
  consensusApexIntensity: 15.554447237443734
  qvalue: 0.38296484850166657
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
    ]),
  })
  '''
# ---
# name: test_loadTransitionGroupFeatures[combined-INVALID-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
    ]),
    'test_raw_2': list([
    ]),
  })
  '''
# ---
# name: test_loadTransitionGroupFeatures[diann1-AGAANIVPNSTGAAK-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 1933.4520000000002
  rightBoundary: 1967.5919999999999
  areaIntensity: 10209.3
  consensusApex: 1950.522
  consensusApexIntensity: None
  qvalue: 2.90751e-06
  consensusApexIM: 0
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: DIA-NN,
    ]),
  })
  '''
# ---
# name: test_loadTransitionGroupFeatures[diann1-INVALID-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
    ]),
  })
  '''
# ---
# name: test_loadTransitionGroupFeatures[openswath-AGAANIVPNSTGAAK-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 2206.55908203125
  rightBoundary: 2250.93701171875
  areaIntensity: 93.7645
  consensusApex: 2226.53
  consensusApexIntensity: 25.361407994046484
  qvalue: 0.27997408312165795
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 2001.72900390625
  rightBoundary: 2039.2840576171875
  areaIntensity: 70.6678
  consensusApex: 2009.74
  consensusApexIntensity: 33.88131947814447
  qvalue: 1.822896508451022e-05
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 2158.76611328125
  rightBoundary: 2203.14501953125
  areaIntensity: 113.104
  consensusApex: 2177.07
  consensusApexIntensity: 30.8382840089739
  qvalue: 0.16741273086102035
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 2117.801025390625
  rightBoundary: 2158.76611328125
  areaIntensity: 784.279
  consensusApex: 2138.98
  consensusApexIntensity: 165.07510208344246
  qvalue: 0.0009590506619916316
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 1923.2130126953125
  rightBoundary: 2001.72900390625
  areaIntensity: 44921.8
  consensusApex: 1953.14
  consensusApexIntensity: 4390.32825839279
  qvalue: 6.993573006436113e-06
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
    ]),
    'test_raw_2': list([
      -------- TransitionGroupFeature --------
  leftBoundary: 2104.14990234375
  rightBoundary: 2145.115966796875
  areaIntensity: 417.457
  consensusApex: 2126.42
  consensusApexIntensity: 95.16263446243194
  qvalue: 0.0004287466278223515
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 1971.010986328125
  rightBoundary: 2039.2860107421875
  areaIntensity: 1049.18
  consensusApex: 2000.31
  consensusApexIntensity: 159.3757949554613
  qvalue: 3.35632586944344e-05
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 1895.906005859375
  rightBoundary: 1971.010986328125
  areaIntensity: 30771.2
  consensusApex: 1920.24
  consensusApexIntensity: 2540.8210337067203
  qvalue: 6.993573006436113e-06
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
      -------- TransitionGroupFeature --------
  leftBoundary: 2145.115966796875
  rightBoundary: 2182.6708984375
  areaIntensity: 60.9997
  consensusApex: 2162.68
  consensusApexIntensity: 15.554447237443734
  qvalue: 0.38296484850166657
  consensusApexIM: None
  precursor_mz: None
  precursor_charge: 2
  product_annotations: None
  product_mz: None
  sequence: AGAANIVPNSTGAAK
  software: OpenSWATH,
    ]),
  })
  '''
# ---
# name: test_loadTransitionGroupFeatures[openswath-INVALID-2]
  '''
  TransitionGroupFeatureCollection({
    'test_raw_1': list([
    ]),
    'test_raw_2': list([
    ]),
  })
  '''
# ---
